--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
 
   standalone:
     container_name: milvus-standalone
-    image: milvusdb/milvus:v2.3.2
+    image: milvusdb/milvus:v2.4.12
     command: ["milvus", "run", "standalone"]
     security_opt:
       - seccomp:unconfined
@@ -74,6 +74,11 @@ services:
       - BACKEND_PORT=${BACKEND_PORT}
       - MILVUS_IP=milvus-standalone
       - MILVUS_PORT=${MILVUS_PORT}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "10"
     volumes:
       - ./backend/src:/code/src
       - ./backend/datasets.json:/datasets.json
@@ -89,6 +94,11 @@ services:
     build:
       context: ./frontend/docker
       dockerfile: Dockerfile
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "10"
     volumes:
       - ./frontend/build:/build
     ports:
@@ -111,13 +121,6 @@ services:
       - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ${SSL_FULL_CHAIN_PATH}:${SSL_FULL_CHAIN_PATH}
       - ${SSL_PRIVATE_KEY_PATH}:${SSL_PRIVATE_KEY_PATH}
-      - ../best_artworks:/usr/share/nginx/best_artworks
-      - ../wikiart:/usr/share/nginx/wikiart
-      - ../celebahq:/usr/share/nginx/celebahq
-      - ../MNIST:/usr/share/nginx/MNIST
-      - ../CIFAR-100:/usr/share/nginx/CIFAR-100
-      - ../Fashion-MNIST:/usr/share/nginx/Fashion-MNIST
-      - ../COCO-2017:/usr/share/nginx/COCO-2017
     ports:
       - "443:443"
       - "80:80"
